# AttendanceManagement

./: CMakeLists.txt  README.md  main.cpp
frontend/: CameraThread.cpp  DatabaseManager.cpp  FaceEngine.cpp  MainWindow.cpp
include/: CameraThread.h  DatabaseManager.h  FaceEngine.h  MainWindow.h  SafeQueue.h  camera.h  mainpanel.h  safequeue.h
sql/: init.sql
src/: camera.cpp  main.cpp  mainpanel.cpp
